--- a/mysql-app/templates/deployment.yaml
+++ b/mysql-app/templates/deployment.yaml
@@ -26,22 +26,22 @@ spec:
           valueFrom:
             secretKeyRef:
               key: database-user
-              name: mysql
+              name: {{ .Values.metadata.name }}
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
               key: database-password
-              name: mysql
+              name: {{ .Values.metadata.name }}
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               key: database-root-password
-              name: mysql
+              name: {{ .Values.metadata.name }}
         - name: MYSQL_DATABASE
           valueFrom:
             secretKeyRef:
               key: database-name
-              name: mysql
+              name: {{ .Values.metadata.name }}
         ports:
         - containerPort: 3306
           name: mysql
